
2018-02-16  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_app_list_remove_dup): Separate function to remove duplicates
	* Improved functions: lapps_application_icon, lapps_create_table, lapps_app_list(remove duplicates)

2018-02-15  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Saving the icons for best performance(test)

2018-02-11  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_show_default_page): Added error icon for app not found

2018-02-09  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Compatibility with the common resolutions tested: TODO: more tests

2018-02-08  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Adj in the label of the apps for compat with the common resolutions: TODO: app_label_height adjust

2018-02-07  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Issues fixed, version 1.1.2 will be released
	* App duplication fixed TODO[segment fault when running the selected app]
	* Heap overflow issue fixed

2018-02-06  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Recent applications disabled until the heap overflow problem is fixed
	* Type gchar to char

2018-02-04  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Layout management for all commons resolutions(TODO: fix app label size)

2018-02-02  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Positions Adjusts: Recent Applications frame
	* Adjusts on Recent Applications frame
	* Indicatore font size, width and height
	* Icons sizes for commons resolutions
	* log icon size for test
	* Adjustment of the indicators and table
	* Completion improvement: search on select

2018-02-01  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Iniciando resolução de problemas com telas diferentes de 1920x1080

2018-01-31  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_match_completion): Added function to improve completion functionality
	* launchapps.c (lapps_app_list): Fixed: including searching for id(exec name)